# snmalloc_project

./: .gitignore  CMakeLists.txt  README.md  main.cpp  test.cpp
include/: lyf.h  lyf_config.h  memCheck.h  scf.h  stopwatch.h
src/: CMakeLists.txt  memCheck.cpp
